--- a/synthSandbox/styles.css
+++ b/synthSandbox/styles.css
@@ -12,6 +12,12 @@ h1 {
 
 h2 {
     color: black;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+p {
+    margin: 5px;
 }
 
 /* Class selectors */
@@ -83,6 +89,19 @@ h2 {
 
 .delay-number {
     margin-top: 5px;
+    width: 50px;
+}
+
+.number-box {
+    width: 50px;
+    margin-right: 3px;
+    margin-left: 3px;
+}
+
+.speed-bar {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .check-box {
