--- a/conwaysGameOfSound/style.css
+++ b/conwaysGameOfSound/style.css
@@ -1,7 +1,7 @@
 /* Element selectors */
 
 html {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(137, 221, 236);
   flex: 1 1 auto;
   zoom: 80%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -10,6 +10,21 @@ html {
 h {
   font-size: 50px;
   font-weight: bold;
+}
+
+/* Class selectors */
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.column {
+  flex-direction: column;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-items: flex-start;
+  padding: 5px 5px 5px 5px;
 }
 
 .modal {
@@ -51,20 +66,7 @@ h {
   cursor: pointer; /* Cursor on hover */
 }
 
-#row {
-  display: flex;
-  flex-direction: row;
-}
-
-#column {
-  flex-direction: column;
-  flex-grow: 1;
-  flex-shrink: 1;
-  flex-basis: auto;
-  align-items: flex-start;
-  padding: 5px 5px 5px 5px;
-}
-
+/* id selectors */
 #start-box {
   text-align: center;
 }
